update with partial image/block objects for landscape and mindfield context rendering

--- a/var/www/public/html/index.html
+++ b/var/www/public/html/index.html
@@ -20,12 +20,19 @@
   <body>
     <div class="pg">
       <div class="ctn">
-        <canvas class="cvs"></canvas>
+        <canvas class="cvs landscape"></canvas>
+        <canvas class="cvs landmines"></canvas>
+        <canvas class="cvs character"></canvas>
       </div>
     </div>
 
     <script src="../vendor/QUnit/v2.19.1/js/qunit.js"></script>
     <script src="../js/draw.js"></script>
+    <script src="../js/grid.js"></script>
+    <script src="../js/render.js"></script>
+    <script src="../js/bird.js"></script>
+    <script src="../js/landscape.js"></script>
+    <script src="../js/minefield.js"></script>
     <script src="../js/load.js"></script>
     <script src="../js/index.js"></script>
   </body>
