complete minefield animation without controls and without a speed adjustment parameter

--- a/var/www/public/html/index.html
+++ b/var/www/public/html/index.html
@@ -16,6 +16,15 @@
 
     <link rel="stylesheet" href="../vendor/QUnit/v2.19.1/css/qunit.css" />
     <link rel="stylesheet" href="../css/index.css" />
+
+    <script>
+var YELLOWBIRDIMAGE = new Image();
+var PIPEGREENTOPIMAGE = new Image();
+var PIPEGREENBOTTOMIMAGE = new Image();
+YELLOWBIRDIMAGE.src = '../img/yellowbird-midflap.png';
+PIPEGREENTOPIMAGE.src = '../img/pipe-green-top.png';
+PIPEGREENBOTTOMIMAGE.src = '../img/pipe-green-bottom.png';
+    </script>
   </head>
   <body>
     <div class="pg">
